--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^10.4.1",
     "flowbite": "^1.8.1",
+    "oh-vue-icons": "1.0.0-rc3",
     "vue": "^3.3.4"
   },
   "devDependencies": {
