--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^10.4.1",
     "flowbite": "^1.8.1",
     "oh-vue-icons": "1.0.0-rc3",
+    "typeit": "^8.8.3",
     "vue": "^3.3.4"
   },
   "devDependencies": {
