--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.4.1",
+    "aos": "3.0.0-beta.6",
     "flowbite": "^1.8.1",
     "oh-vue-icons": "1.0.0-rc3",
     "typeit": "^8.8.3",
