--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@vueuse/core": "^10.4.1",
     "aos": "3.0.0-beta.6",
+    "emailjs-com": "^3.2.0",
     "flowbite": "^1.8.1",
     "oh-vue-icons": "1.0.0-rc3",
+    "sweetalert2": "^11.10.6",
     "typeit": "^8.8.3",
     "vue": "^3.3.4"
   },
